--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'metaltrazos@gmail.com'
+phone: '+57 321 7474823'
 contact_button_link: 'contact'
